<resources>
    <string name="app_name">Shopping Assistant</string>
    <string name="header_1">Data Input</string>
    <string name="header_2">Data Saved</string>
    <string name="header_3">Choose Language</string>
    <string name="btn_close">Close</string>
    <string name="btn_save">Save</string>
    <string name="btn_lang">Change Language</string>
    <string name="btn_nuke">Reset database</string>
    <string name="calendar">Pick date</string>
    <string name="scan">Scan</string>
    <string name="barcode">Scan a barcode</string>
    <string name="google">Login with Google account</string>


    <!-- Items -->
    <string name="EAN">EAN</string>
    <string name="item_name">Item name</string>
    <string name="expirationDate">Expiration date</string>
    <string name="stock">Stock</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="storage">Storage</string>
    <string name="shop">Shop</string>
    <string name="description">Description</string>
    <string name="category">Item category</string>

    <!-- Item Recyclerview -->
    <string name="rv_stock" translatable="false">x%s</string>

    <!-- Item Dialog Fragment -->
    <string name="currency">%.2f€</string>
    <string name="dg_stock">Stock:</string>
    <string name="dg_description"><u>Description:</u></string>

    <!-- Toast -->
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="deleteToast">Delete selected items?</string>
    <string name="favoriteToast">Remove selected items from favorites list?</string>
    <string name="shoppingToast">Remove selected items from shopping list?</string>
    <string name="resetToast">Reset database?</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="successfulCreation">Successful creation!</string>
    <string name="unSuccessfulCreation">Unsuccessful creation! Check input values</string>

    <!-- Login activity -->
    <string name="login">Login</string>
    <string name="forgotPassword">forgot password?</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="signIn">SIGN IN</string>
    <string name="signUp"> Sign up</string>
    <string name="newUser">New user?</string>
    <string name="title_activity_login">LoginActivity</string>

</resources>